--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 .vs/WpfBaseLesson/FileContentIndex/d1d9345b-68ac-4ae1-ae13-8950b6540d97.vsidx
 .vs/WpfBaseLesson/FileContentIndex/556a04a0-5e87-483f-aa51-7bd2ea5bef67.vsidx
 .vs/WpfBaseLesson/FileContentIndex/3b78eec2-ef01-452b-8d5a-30e9cc9769bd.vsidx
+.vs/WpfBaseLesson/FileContentIndex/a112b35e-ff38-49fa-b3f7-706cf6686b3d.vsidx
