全局样式和资源字典

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 .vs/WpfBaseLesson/FileContentIndex/556a04a0-5e87-483f-aa51-7bd2ea5bef67.vsidx
 .vs/WpfBaseLesson/FileContentIndex/3b78eec2-ef01-452b-8d5a-30e9cc9769bd.vsidx
 .vs/WpfBaseLesson/FileContentIndex/a112b35e-ff38-49fa-b3f7-706cf6686b3d.vsidx
+*.vsidx
